--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -48,6 +48,49 @@ server {
     client_max_body_size 64M;
     error_page 404 @notfound;
 
+    # mask known ZnoteAAC directories
+    location /LUA {
+        deny all;
+        return 404;
+    }
+
+    location /engine/cache {
+        deny all;
+        return 404;
+    }
+
+    location /special {
+        allow 127.0.0.1;
+        deny all;
+    }
+
+    # mask known MyAAC directories
+    location /cache {
+        deny all;
+        return 404;
+    }
+
+    location /logs {
+        deny all;
+        return 404;
+    }
+
+    location /migrations {
+        deny all;
+        return 404;
+    }
+
+    location /plugins {
+        deny all;
+        return 404;
+    }
+
+    location /system {
+        deny all;
+        return 404;
+    }
+
+    # our regular locations
     location / {
         index index.html index.php;
         try_files $uri $uri/ /index.php?$args;
