--- a/templates/tfs-gdb.service
+++ b/templates/tfs-gdb.service
@@ -3,10 +3,11 @@ Description=The Forgotten Server
 After=network.target
 Wants=network-online.target mysql.service
 After=network-online.target mysql.service
+Conflicts=tfs.service
 
 [Service]
 Type=simple
-ExecStart=/home/otsmanager/forgottenserver/build/tfs
+ExecStart=/usr/bin/gdb -q -batch -ex "handle SIGTERM nostop pass" -ex "handle SIGINT nostop pass" -ex "handle SIGHUP nostop pass" -ex "handle SIGUSR1 nostop pass" -ex "run" -ex "thread apply all backtrace" /home/otsmanager/forgottenserver/build/tfs
 WorkingDirectory=/home/otsmanager/forgottenserver
 User=otsmanager
 Group=otsmanager
