--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -1,4 +1,4 @@
-limit_req_zone $binary_remote_addr zone=req_zone:10m rate=30r/m;
+limit_req_zone $binary_remote_addr zone=req_zone:10m rate=60r/m;
 
 server {
     listen       80 default_server;
@@ -119,7 +119,7 @@ server {
         add_header Content-Type text/plain always;
     }
 
-    # phpmyadmin uses non-obvious
+    # phpMyAdmin
     location /pma3380 {
         alias /usr/share/phpmyadmin;
         client_max_body_size 64M;
@@ -179,4 +179,6 @@ server {
     set_real_ip_from 2405:8100::/32;
     set_real_ip_from 2a06:98c0::/29;
     set_real_ip_from 2c0f:f248::/32;
+
+    include /etc/nginx/default.d/*.conf;
 }
