--- a/templates/60-charset.cnf
+++ b/templates/60-charset.cnf
@@ -1,3 +1,3 @@
 [mysqld]
-character-set-server  = utf8
-collation-server      = utf8_general_ci
+character-set-server  = utf8mb4
+collation-server      = utf8mb4_unicode_ci
