Fixed mysql_db import

--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -61,6 +61,7 @@
     name: forgottenserver
     state: import
     target: /home/otsmanager/forgottenserver/schema.sql
+    login_unix_socket: /var/run/mysqld/mysqld.sock
 
 - name: Copy config.lua.dist to config.lua if necessary
   copy:
