Fix mysql_db import in znoteaac.yml

--- a/tasks/znoteaac.yml
+++ b/tasks/znoteaac.yml
@@ -41,3 +41,4 @@
     name: forgottenserver
     state: import
     target: /home/otsmanager/www/public_html/engine/database/znote_schema.sql
+    login_unix_socket: /var/run/mysqld/mysqld.sock
