--- a/local.yml
+++ b/local.yml
@@ -89,6 +89,7 @@
         - pma
 
     - include: tasks/phpmyadmin-sso.yml
+      when: ansible_distribution_major_version|int >= 22
       tags:
         - sso
 
