--- a/local.yml
+++ b/local.yml
@@ -58,63 +58,63 @@
         php_version_number: "{{ php_version_query.stdout.split('-')[0][3:] }}"
       tags: always
 
-    - include_tasks: tasks/systemd.yml
+    - import_tasks: tasks/systemd.yml
       tags:
         - default
         - systemd
 
-    - include_tasks: tasks/general.yml
+    - import_tasks: tasks/general.yml
       tags:
         - default
         - general
 
-    - include_tasks: tasks/mysql.yml
+    - import_tasks: tasks/mysql.yml
       tags:
         - default
         - mysql
 
-    - include_tasks: tasks/php-fpm.yml
+    - import_tasks: tasks/php-fpm.yml
       tags:
         - default
         - php-fpm
 
-    - include_tasks: tasks/nginx.yml
+    - import_tasks: tasks/nginx.yml
       tags:
         - default
         - nginx
 
-    - include_tasks: tasks/phpmyadmin.yml
+    - import_tasks: tasks/phpmyadmin.yml
       tags:
         - default
         - pma
 
-    - include_tasks: tasks/phpmyadmin-sso.yml
+    - import_tasks: tasks/phpmyadmin-sso.yml
       when: ansible_distribution_major_version|int >= 22
       tags:
         - sso
 
-    - include_tasks: tasks/tfs.yml
+    - import_tasks: tasks/tfs.yml
       tags:
         - default
         - tfs
 
-    - include_tasks: tasks/tfs-old.yml
+    - import_tasks: tasks/tfs-old.yml
       tags:
         - tfs-old
 
-    - include_tasks: tasks/znoteaac.yml
+    - import_tasks: tasks/znoteaac.yml
       tags:
         - default
         - znote
 
-    - include_tasks: tasks/myaac.yml
+    - import_tasks: tasks/myaac.yml
       tags:
         - myaac
 
-    - include_tasks: tasks/general-last.yml
+    - import_tasks: tasks/general-last.yml
       tags:
         - default
         - general
 
-    - include_tasks: tasks/wine.yml
+    - import_tasks: tasks/wine.yml
       tags: wine
