Chore: Restart php8.3-fpm and mysql services in local.yml

--- a/local.yml
+++ b/local.yml
@@ -24,6 +24,11 @@
         name: php8.1-fpm
         state: restarted
 
+    - name: restart php8.3-fpm
+      service:
+        name: php8.3-fpm
+        state: restarted
+
     - name: restart mysql
       service:
         name: mysql
