--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -29,7 +29,7 @@
   git:
     repo: https://github.com/otland/forgottenserver.git
     dest: /home/otsmanager/forgottenserver
-    version: "1.4"
+    version: master
   become: true
   become_user: otsmanager
 
