--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -12,6 +12,7 @@
       - libboost-filesystem-dev
       - libboost-iostreams-dev
       - libboost-locale-dev
+      - libboost-json-dev
       - libcrypto++-dev
       - liblua5.2-dev
       - libluajit-5.1-dev
