--- a/tasks/tfs.yml
+++ b/tasks/tfs.yml
@@ -11,6 +11,8 @@
       - libboost-date-time-dev
       - libboost-filesystem-dev
       - libboost-iostreams-dev
+      - libboost-locale-dev
+      - libboost-json-dev
       - libcrypto++-dev
       - liblua5.2-dev
       - libluajit-5.1-dev
@@ -29,7 +31,7 @@
   git:
     repo: https://github.com/otland/forgottenserver.git
     dest: /home/otsmanager/forgottenserver
-    version: "1.4"
+    version: master
   become: true
   become_user: otsmanager
 
