--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -1,5 +1,10 @@
 limit_req_zone $binary_remote_addr zone=req_zone:10m rate=60r/m;
 
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen       80 default_server;
     listen       443 ssl default_server;
@@ -47,6 +52,17 @@ server {
 
     client_max_body_size 64M;
     error_page 404 @notfound;
+
+    # internal otd server
+    location /api-otd {
+        rewrite /api-otd(/.*|$) /$1  break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_pass http://localhost:5555;
+    }
 
     # mask known ZnoteAAC directories
     location /LUA {
