--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -55,7 +55,7 @@ server {
 
     # internal otd server
     location /api-otd {
-        rewrite /api-otd(/.*|$) /$1  break;
+        rewrite /api-otd(/?)(.*) /$2  break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_http_version 1.1;
