--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -21,21 +21,6 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_tickets off;
 
-    # https://wiki.mozilla.org/Security/Server_Side_TLS#OCSP_Stapling
-    # https://tools.ietf.org/html/rfc6066#section-8
-    # https://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_stapling
-    #
-    # (1) Use Cloudflare 1.1.1.1 DNS resolver
-    #     https://developers.cloudflare.com/1.1.1.1/setting-up-1.1.1.1/
-    #
-    # (2) Use Google 8.8.8.8 DNS resolver
-    #     https://developers.google.com/speed/public-dns/docs/using
-    #
-    # (3) Use Dyn DNS resolver
-    #     https://help.dyn.com/internet-guide-setup/
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
     resolver
     # (1)
       1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001]
@@ -50,7 +35,7 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    client_max_body_size 64M;
+    client_max_body_size 100M;
     error_page 404 @notfound;
 
     # internal otd server
@@ -62,6 +47,10 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_pass http://localhost:5555;
+    }
+
+    location ~ /\. {
+        deny all;
     }
 
     # mask known ZnoteAAC directories
@@ -106,6 +95,16 @@ server {
         return 404;
     }
 
+    location /node_modules {
+        deny all;
+        return 404;
+    }
+
+    location /vendor {
+        deny all;
+        return 404;
+    }
+
     # our regular locations
     location / {
         index index.html index.php;
@@ -123,6 +122,8 @@ server {
         fastcgi_param           SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_buffers         16 16k;
         fastcgi_buffer_size     32k;
+        fastcgi_intercept_errors off;
+        fastcgi_read_timeout    240s;
         include                 fastcgi_params;
         # Bypass the fact that try_files resets $fastcgi_path_info
         # see: http://trac.nginx.org/nginx/ticket/321
@@ -138,7 +139,7 @@ server {
     # phpMyAdmin
     location /pma3380 {
         alias /usr/share/phpmyadmin;
-        client_max_body_size 64M;
+        client_max_body_size 100M;
 
         index index.html index.php;
         try_files $uri $uri/ /index.php?$args;
