--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -62,6 +62,9 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_pass http://localhost:5555;
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_read_timeout 24h;
     }
 
     # mask known ZnoteAAC directories
