--- a/templates/nginx-vhost.conf
+++ b/templates/nginx-vhost.conf
@@ -19,38 +19,13 @@ server {
     ssl_ecdh_curve X25519:prime256v1:secp384r1;
     ssl_session_timeout  10m;
     ssl_session_cache shared:SSL:10m;
-    ssl_session_tickets off;
-
-    # https://wiki.mozilla.org/Security/Server_Side_TLS#OCSP_Stapling
-    # https://tools.ietf.org/html/rfc6066#section-8
-    # https://nginx.org/en/docs/http/ngx_http_ssl_module.html#ssl_stapling
-    #
-    # (1) Use Cloudflare 1.1.1.1 DNS resolver
-    #     https://developers.cloudflare.com/1.1.1.1/setting-up-1.1.1.1/
-    #
-    # (2) Use Google 8.8.8.8 DNS resolver
-    #     https://developers.google.com/speed/public-dns/docs/using
-    #
-    # (3) Use Dyn DNS resolver
-    #     https://help.dyn.com/internet-guide-setup/
-    ssl_stapling on;
-    ssl_stapling_verify on;
-
-    resolver
-    # (1)
-      1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001]
-    # (2)
-      8.8.8.8 8.8.4.4 [2001:4860:4860::8888] [2001:4860:4860::8844]
-    # (3)
-      # 216.146.35.35 216.146.36.36
-      valid=60s;
-    resolver_timeout 2s;
+    ssl_session_tickets on;
 
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    client_max_body_size 64M;
+    client_max_body_size 100M;
     error_page 404 @notfound;
 
     # internal otd server
